# gens

./: .gitignore  .travis.yml  AUTHORS  AUTHORS.txt  BUGS  ChangeLog.txt  GENS-DEVS-README-FIRST.txt  Makefile.am  Makefile.cvs  Makefile.in  NEWS  NEWS.txt  README  README.txt  TODO  aclocal.m4  build.sh  config.h.in  configure  configure.ac  configure.in  gens_gs.kdevelop  mkinstalldirs  moc.mk  setup.sh  strip_fPIC.sh
doc/: BUGS.txt  MDP.txt  Makefile.am  TODO  TODO.txt  genecyst_save_file_format.txt  gens.txt  history.txt
doc/manual/: dialog-ca.html  gens.css  index.html  io-config.html  io-teamplayer.html  menu-cpu.html  menu-file.html  menu-graphics.html  menu-options.html  menu-plugins.html  menu-sound.html  menus-cpu.html  menus-file.html  menus-graphics.html  plugin-gamegenie.html  plugin-manager.html  plugin-render.html  plugin-vlopt.html
doc/mdp/: history.html  index.html  mdp.css  mdp_cpuflags_h.html  mdp_dlopen_h.html  mdp_error_h.html  mdp_h.html  mdp_host_h.html  mdp_render_h.html  mdp_version_h.html
images/: Makefile.am
pixmaps/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in
src/cbob/: Makefile.am  cbob.c
src/extlib/: Makefile.am
src/extlib/libpng/: Makefile.am  _MODIFIED_LIBPNG.txt
src/extlib/lzma/: 7zFile.c  Makefile.am
src/extlib/minizip/: Makefile.am  iowin32.c  unzip.c
src/extlib/mp3_dec/: Makefile.am  huffman.h  layer3.c  tabinit.c
src/extlib/zlib/: Makefile.am  _MODIFIED_ZLIB.txt
src/gens/: Makefile.am  Makefile.cbob.inc.am  Makefile.haiku.inc.am  Makefile.in  Makefile.linux.inc.am  Makefile.plugins.inc.am  Makefile.unix.inc.am  Makefile.win32.am.inc  Makefile.win32.inc.am
src/gens/audio/: audio.c  audio.cpp  audio.h  audio.hpp  audio_dsound.cpp  audio_dsound.hpp  audio_dsound_t.c  audio_dsound_t.h  audio_haiku.c  audio_haiku.h  audio_mmx.S  audio_mmx.asm  audio_mmx.h  audio_sdl.c  audio_sdl.cpp  audio_sdl.h  audio_sdl.hpp  audio_write.c  audio_write.h
src/gens/charset/: cp1252.cpp  cp1252.hpp  iconv_string.cpp  iconv_string.hpp
src/gens/debug/: Makefile.am  debug.c  debug.h  m68kd.c  m68kd.h  sh2d.c  sh2d.h  z80dis.c  z80dis.h
src/gens/debugger/: debugger.c  debugger.cpp  debugger.h  debugger.hpp  fb_32x.cpp  fb_32x.hpp  m68kd.c  m68kd.h  mcd_cell_dump.asm  mcd_cell_dump.h  sh2d.c  sh2d.h  z80dis.c  z80dis.h
src/gens/dll/: dll_png.c  dll_png.h
src/gens/emulator/: Makefile.am  fw_32x.c  fw_32x.h  g_32x.c  g_32x.cpp  g_32x.h  g_32x.hpp  g_32x_32bit.c  g_32x_32bit.h  g_input.c  g_input.cpp  g_input.h  g_input.hpp  g_input_linux.h  g_main.c  g_main.cpp  g_main.h  g_main.hpp  g_main_haiku.cpp  g_main_haiku.hpp  g_main_linux.c  g_main_linux.cpp  g_main_linux.h  g_main_linux.hpp  g_main_unix.cpp  g_main_unix.hpp  g_main_win32.cpp  g_main_win32.hpp  g_mcd.c  g_mcd.cpp  g_mcd.h  g_mcd.hpp  g_md.c  g_md.cpp  g_md.h  g_md.hpp  g_palette.c  g_palette.h  g_update.c  g_update.cpp  (+22 more)
src/gens/fw/: Makefile.am
src/gens/gens_core/: Makefile.am  nasm_x86.inc  nasmhead.inc
src/gens/gtkui/: support.c  support.h
src/gens/input/: input.c  input.cpp  input.h  input.hpp  input_dinput.cpp  input_dinput.hpp  input_dinput_key_names.c  input_dinput_key_names.h  input_dinput_t.c  input_dinput_t.h  input_haiku.c  input_haiku.cpp  input_haiku.h  input_haiku.hpp  input_haiku_keys.h  input_haiku_t.c  input_haiku_t.h  input_sdl.c  input_sdl.cpp  input_sdl.h  input_sdl.hpp  input_sdl_events.cpp  input_sdl_events.hpp  input_sdl_joystate.h  input_sdl_key_names.c  input_sdl_key_names.h  input_sdl_keys.h  input_update.c  input_update.h  input_win32_keys.h
src/gens/macros/: bool_m.h  compat_m.h  debug_msg.c  debug_msg.h  fastcall.h  file_m.h  force_inline.h  hashtable.hpp  log_msg.c  log_msg.h  malloc_align.h  math.hpp  unused.h
src/gens/mp3_dec/: Makefile.am  common.c  decode_i386.c  layer3.c  mpg123.h  tabinit.c
src/gens/netplay/: ccnet.c  ccnet.h  net.h
src/gens/plugins/: Makefile.am  eventmgr.cpp  eventmgr.hpp  gens_ld.h  mdp.h  mdp_fncall.h  mdp_host.c  mdp_host.h  mdp_host_gens.c  mdp_host_gens.h  mdp_host_gens_config.cpp  mdp_host_gens_config.hpp  mdp_host_gens_cpp.cpp  mdp_host_gens_cpp.hpp  mdp_host_gens_dir.cpp  mdp_host_gens_dir.hpp  mdp_host_gens_emuctrl.cpp  mdp_host_gens_emuctrl.hpp  mdp_host_gens_event.cpp  mdp_host_gens_event.hpp  mdp_host_gens_mem.c  mdp_host_gens_mem.h  mdp_host_gens_menu.cpp  mdp_host_gens_menu.hpp  mdp_host_gens_reg.c  mdp_host_gens_reg.h  mdp_host_gens_win32.c  mdp_host_gens_win32.h  mdp_host_gens_z.c  mdp_host_gens_z.h  mdp_incompat.cpp  mdp_incompat.hpp  mdp_render.h  mdp_version.h  plugin.h  pluginmgr.cpp  pluginmgr.hpp  rendermgr.cpp  rendermgr.hpp
src/gens/port/: Makefile.am  argc_argv.c  argc_argv.h  ini.cpp  ini.hpp  ini_old.c  ini_old.h  port.c  port.h  timer.c  timer.h
src/gens/sdllayer/: Makefile.am  g_effects.c  g_effects.cpp  g_effects.h  g_effects.hpp  g_opengl.c  g_opengl.h  g_sdldraw.c  (+5 more)
src/libgsft/: Makefile.am  gsft_bool.h  gsft_byteswap.c  gsft_byteswap.h  gsft_file.c  gsft_file.h  gsft_fncall.h  gsft_hashtable.hpp  gsft_iconv.c  gsft_iconv.h  gsft_malloc_align.h  gsft_png.c  gsft_png.h  gsft_png_dll.c  gsft_png_dll.h  gsft_pure.h  gsft_space_elim.c  gsft_space_elim.h  gsft_strdup.c  gsft_strdup.h  gsft_strlcpy.h  gsft_strsep.c  gsft_strsep.h  gsft_strtok_r.c  gsft_strtok_r.h  gsft_strz.h  gsft_szprintf.h  gsft_unused.h  gsft_win32.c  gsft_win32.h  gsft_win32_gdi.c  gsft_win32_gdi.h  strlcat.c  strlcpy.c
src/libpng/: Makefile.am  _MODIFIED_LIBPNG.txt  pngconf.h
src/lzma/: Makefile.am
src/mdZ80/: Makefile.am  mdZ80.asm  mdZ80.c  mdZ80.h  mdZ80_DAA.c  mdZ80_DAA.h  mdZ80_opcodes.h  mdZ80_x86.asm
src/mdp/: Makefile.am  mdp.h  mdp_constants.h  mdp_cpuflags.h  mdp_dlopen.h  mdp_error.h  mdp_event.h  mdp_fncall.h  mdp_gnu_as_x86.inc  mdp_host.h  mdp_mem.h  mdp_nasm_x86.inc  mdp_reg.h  mdp_render.h  mdp_stdint.h  mdp_version.h  mdp_win32.h  mdp_z.h
src/minizip/: Makefile.am
src/mp3_dec/: Makefile.am  dct64_i386.c  interface.c  layer3.c  mpg123.h  mpglib.h
src/starscream/: Makefile.am  Makefile.in  dummy.c  star_m68k.c  star_s68k.c
src/zlib/: Makefile.am  _MODIFIED_ZLIB.txt
(+1172 files in other folders)
