AUTOMAKE_OPTIONS = foreign
SUBDIRS = images xdg src

# aclocal --install does *not* work on automake-1.9.
# TODO: Upgrade to 1.10 or 1.11?
#ACLOCAL_AMFLAGS = -I m4 --install
ACLOCAL_AMFLAGS = -I m4

BUILT_SOURCES =
CLEANFILES =

include $(srcdir)/git_version.am

love:
	@echo What is love?
	@echo Baby don\'t hurt me.
	@echo Don\'t hurt me.
	@echo No more.
