AUTOMAKE_OPTIONS = foreign
SUBDIRS = doc images xdg src

ACLOCAL_AMFLAGS = -I m4 --install

BUILT_SOURCES =
CLEANFILES =

include $(srcdir)/git_version.am

love:
	@echo "What is love?"
	@echo "Baby don't hurt me."
	@echo "Don't hurt me."
	@echo "No more."

me:
	@if [ "`id -u`" != "0" ]; then echo "What? Make it yourself!" ; else echo "Okay." ; fi

a:
	@echo >/dev/null

sandwich:
	@echo >/dev/null
